[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["canvas"] }
native-dialog = "0.7.0"
rodio = "0.17.3"
# plotters = "0.3.0"
# image = "0.24.7"
